Игра на Vue завершена!

--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,13 @@ i.fa {
     justify-content: center;
     text-align: center;
     min-height: 70px;
-    width: 250px;
+    width: 270px;
     background: linear-gradient(rgb(44, 21, 21), rgb(100, 46, 2));
     box-shadow: 0px 3px 0px 0px #ffffff;
     margin: 0 auto;
     border-radius: 10px;
     text-decoration: none;
-    font-style: 16px;
+    font-size: 20px;
     line-height: 20px;
     color: #fff;
     text-transform: uppercase;
@@ -101,7 +101,7 @@ i.fa {
 .app__body-title {
     text-align: center;
     text-transform: uppercase;
-    font-style: 25px;
+    font-size: 25px;
     margin-bottom: 20px;
     margin-top: 20px;
 }
@@ -121,14 +121,15 @@ i.fa {
 }
 
 .app__card-text {
-    font-style: 22px;
+    font-size: 22px;
     margin-bottom: 10px;
 }
 .app__card-count {
-    font-style: 18px;
+    font-size: 22px;
 }
 .app__body-middle {
     margin-bottom: 15px;
+    
 }
 .app__result {
     display: flex;
@@ -139,6 +140,7 @@ i.fa {
     background-color: rgba(73, 85, 255, 0.5);
     border-radius: 10px;
     margin-bottom: 7px;
+    font-size: 22px;
 }
 .app__result:last-child {
     margin-bottom: 0;
@@ -149,12 +151,12 @@ i.fa-star {
     margin-bottom: 3px;
 }
 .app__result-name {
-    font-size: 18px;
+    font-size: 22px;
     margin-left: auto;
     margin-right: 20px;
 }
 .app__result-amount {
-    font-size: 18px;
+    font-size: 22px;
 }
 .btn__back {
     width: 70px;
@@ -169,13 +171,14 @@ i.fa-star {
 .app__header-inner {
     color:#fff;
     text-align: center;
+    
 }
 .app__count {
-    font-size: 24px;
+    font-size: 30px;
     margin-bottom: 10px;
 }
 .app__text {
-    font-size: 18px;
+    font-size: 30px;
 }
 .results .app__body {
     justify-content: space-between;
@@ -204,8 +207,9 @@ i.fa-star {
     border-radius: 20px;
     margin-bottom: 20px;
     padding: 10px;
-    font-size: 16px;
+    font-size: 25px;
     line-height: 20px;
+    text-align: center;
 }
 .results__text {
     margin-bottom: 20px;
@@ -215,52 +219,11 @@ i.fa-star {
     background-size: cover;
     background-position: center center;
 }
-.app.results[data-race="zerg"] {
-    background-image: url(../img/zerg_bg.jpg);
-}
-.app.results[data-race="primal"] {
-    background-image: url(../img/primal_bg.jpg);
-}
-.app.results[data-race="terran"] {
-    background-image: url(../img/terran_bg.jpg);
-}
-.app.results[data-race="infested"] {
-    background-image: url(../img/infested_bg.jpg);
-}
-.app.results[data-race="protoss"] {
-    background-image: url(../img/protoss_bg.jpg);
-}
-.app.results[data-race="taldarim"] {
-    background-image: url(../img/taldarim_bg.jpg);
-    background-position: 40% 0;    
-}
-.app.results[data-race="hybrid"] {
-    background-image: url(../img/hybrid_bg.jpg);
-    background-position: 45% 0;
-}
+
 .btn__zerg {
     background-color: #762877;
 }
-.btn__primal {
-    background-color: #56a725;
-}
-.btn__protoss {
-    background-color: #fce356;
-    color: #000;
-}
-.btn__taldarim {
-    background-color: #9d0101;
-}
-.btn__terran {
-    background-color: #da8618;
-}
-.btn__infested {
-    background-color: #f5b673;
-    color: #000;
-}
-.btn__hybrid {
-    background-color: #fc7654;
-}
+
 
 
 
